--- a/src/app/admin/filament/filament.component.html
+++ b/src/app/admin/filament/filament.component.html
@@ -25,6 +25,7 @@
                            [defaultSortField]="'lastName'"
                            [defaultSortDirection]="'Desc'"
                            [showFooter]="'false'"
+                           [emptyMessage]="'Δεν υπάρχει κάποιος χρήστης που να έχει ζητήσει filament!'"
                            (search)="getUsers($event)"
                            [canFilter]="true"
                            #usersList>
