--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 @import '../node_modules/@swimlane/ngx-datatable/themes/material.css';
 @import '../node_modules/@swimlane/ngx-datatable/assets/icons.css';
 @import '../node_modules/material-design-icons/iconfont/material-icons.css';
+@import "~bootstrap/scss/bootstrap";
 
 a {
   cursor: pointer
