update to angular 9 v2

--- a/src/app/_helpers/list-view/list-view.component.html
+++ b/src/app/_helpers/list-view/list-view.component.html
@@ -11,6 +11,7 @@
                [rows]="rows"
                [columns]="columns"
                [columnMode]="'force'"
+               [scrollbarH]="scrollBarHorizontal"
                [count]="count"
                [rowHeight]="50"
                [headerHeight]="50"
