--- a/src/app/admin/shipments/shipments.component.html
+++ b/src/app/admin/shipments/shipments.component.html
@@ -22,7 +22,7 @@
             </div>
         </div>
         <hr />
-        <div class="col-12 mt-3">
+        <div class="col-12 mt-3 p-0">
             <app-list-view [clientSide]="true"
                            [columns]="columns"
                            [rows]="pendingShipments"
