--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -16,7 +16,7 @@
             </div>
         </div>
         <hr />
-        <div class="col-12 mt-3">
+        <div class="col-12 mt-3 p-0">
             <app-list-view [clientSide]="true"
                            [columns]="columns"
                            [rows]="users"
