--- a/src/app/admin/filament/filament.component.html
+++ b/src/app/admin/filament/filament.component.html
@@ -43,7 +43,7 @@
                 <ng-template #deliveryBtn>
                     <button class="btn btn-danger px-4 py-0 my-0"
                             *ngIf="value"
-                            (click)="sendFilament(row)">
+                            (click)="openDialog(row)">
                         <i class="material-icons material-action align-text-top text-light">
                             send
                         </i>
