--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,9 @@
 ﻿<div class="container">
     <div class="col-md-6 offset-md-3 py-5">
         <div class="card">
-            <h4 class="card-header text-center">Hellas COVID19 3D Printing Inventory</h4>
+            <h4 class="card-header text-center">
+                Hellas COVID19 3D Printing Inventory
+            </h4>
             <div class="card-body">
                 <form [formGroup]="loginForm"
                       (ngSubmit)="onSubmit()">
