--- a/src/app/admin/shipments/shipments.component.html
+++ b/src/app/admin/shipments/shipments.component.html
@@ -41,6 +41,13 @@
             </ng-template>
             <ng-template let-row="row"
                          let-value="value"
+                         #trackingNumberTemplate>
+                <a target="_blank"
+                   href="https://www.taxydromiki.com/track/{{value}}"
+                   class="text-dark">{{value}}</a>
+            </ng-template>
+            <ng-template let-row="row"
+                         let-value="value"
                          #deliveryTemplate>
                 <div *ngIf="deliveryLoading else deliveryBtn"
                      class="spinner-border spinner-border-sm"></div>
