--- a/src/app/admin/filament/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/admin/filament/confirm-dialog/confirm-dialog.component.html
@@ -2,10 +2,47 @@
     <h5 mat-dialog-title
         class="modal-title">Αποστολή υλικού σε: <strong>{{data.firstName}} {{data.lastName}}</strong></h5>
 </div>
+<form>
+    <div class="form-row col-12 mr-0">
+        <div class="form-group col-md-6">
+            <label for="firstName">Όνομα*</label>
+            <input type="text"
+                   disabled
+                   value='{{data.firstName}}'
+                   class="form-control" />
+        </div>
+        <div class="form-group col-md-6">
+            <label for="lastName">Επίθετο*</label>
+            <input type="text"
+                   disabled
+                   value='{{data.lastName}}'
+                   class="form-control">
+        </div>
+    </div>
+    <div class="form-row col-12 mr-0">
+        <div class="form-group col-md-6">
+            <label for="address">Διεύθυνση Αποστολής*</label>
+            <textarea disabled
+                      rows="4"
+                      value='{{data.address}}'
+                      class="form-control">
+                </textarea>
+        </div>
+        <div class="form-group col-md-6">
+            <label for="phoneNumber">Τηλέφωνο*</label>
+            <input type="tel"
+                   disabled
+                   value='{{data.phoneNumber}}'
+                   placeholder="6934567891"
+                   class="form-control" />
+        </div>
+    </div>
+</form>
+<hr/>
 <form [formGroup]="filamentForm">
     <div mat-dialog-content
-         class="col-12 mt-2">
-        <mat-form-field>
+         class="col-12 mt-2 ml-0 p-0 text-center">
+        <mat-form-field class="mr-0 py-0">
             <mat-label>Tracking Number</mat-label>
             <input matInput
                    [(ngModel)]="data.filamentTrackingNumber"
@@ -14,7 +51,7 @@
                 Tracking Number is <strong>required</strong>
             </mat-error>
         </mat-form-field>
-        <mat-form-field class="py-2">
+        <mat-form-field class="ml-md-4">
             <mat-label>Ημερ/νια Αποστολής</mat-label>
             <input matInput
                    [matDatepicker]="picker"
